[MODEUSHARV-162] Add JSON schemas, typed response, and new SPI methods for /erm-usage-harvester/impl endpoint (#217)
https://folio-org.atlassian.net/browse/MODEUSHARV-162

## Purpose

The `/erm-usage-harvester/impl` endpoint currently returns only basic
metadata (name, type, isAggregator) for each service implementation. The
COUNTER report release version and supported report types are hardcoded
in the frontend (`ui-erm-usage`), creating tight coupling and
maintenance burden. Moving this information to the backend allows the
frontend to dynamically determine available report releases and types
per service implementation.
## Approach

- Added `getReportRelease()`, `getSupportedReports()`, and `isDefault()`
default methods to the `ServiceEndpointProvider` SPI interface; removed
the `toJson()` method
- Implemented these methods in all existing providers (CS41, CS50, CS51,
NSS) with their specific values
- Added JSON schemas (`serviceImplementation.json`,
`serviceImplementations.json`) and updated `harvester.raml` to type the
`/impl` response, replacing the previously untyped JSON construction
with RMB-generated `ServiceImplementation`/`ServiceImplementations`
POJOs
- Removed `reportRelease` from NSS configuration parameters since it is
now a provider-level property
- Bumped `erm-usage-harvester` interface version from 2.0 to 2.1
- Updated tests to validate the new response structure including the
added fields