@@ -1,6 +1,5 @@
 package org.olf.erm.usage.harvester.endpoints;
 
-import java.util.Arrays;
 import java.util.List;
 import org.folio.rest.jaxrs.model.AggregatorSetting;
 import org.folio.rest.jaxrs.model.UsageDataProvider;
@@ -29,7 +28,40 @@ public class NSSProvider implements ServiceEndpointProvider {
 
   @Override
   public List<String> getConfigurationParameters() {
-    return Arrays.asList("apiKey", "requestorId", "customerId", "reportRelease");
+    return List.of("apiKey", "requestorId", "customerId");
+  }
+
+  @Override
+  public String getReportRelease() {
+    return "4";
+  }
+
+  @Override
+  public List<String> getSupportedReports() {
+    return List.of(
+        "BR1",
+        "BR2",
+        "BR3",
+        "BR4",
+        "BR5",
+        "BR7",
+        "DB1",
+        "DB2",
+        "JR1",
+        "JR1 GOA",
+        "JR1a",
+        "JR2",
+        "JR3",
+        "JR3 Mobile",
+        "JR4",
+        "JR5",
+        "MR1",
+        "MR1 Mobile",
+        "PR1",
+        "TR1",
+        "TR2",
+        "TR3",
+        "TR3 Mobile");
   }
 
   @Override
